--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -53,7 +53,9 @@
         "semanticTokenScopes": [
             {
                 "scopes": {
-                    "type": ["storage.type.lflang"]
+                    "type": [
+                        "storage.type.lflang"
+                    ]
                 }
             }
         ],
