--- a/package.json
+++ b/package.json
@@ -168,7 +168,7 @@
         "watch": "npm run esbuild-base -- --sourcemap --watch",
         "build": "npx ts-node src/build_lds.ts",
         "compile-tests": "npx tsc --lib \"dom\" --outDir out/test --inlineSourceMap",
-        "deploy": "vsce package && echo \"Y\r\n\" | code --install-extension vscode-lingua-franca-*.vsix --force",
+        "deploy": "(mv lingua-franca ../temp-lingua-franca89539275 || move lingua-franca ../temp-lingua-franca89539275) && vsce package && (mv ../temp-lingua-franca89539275 lingua-franca || move ../temp-lingua-franca89539275 lingua-franca) && echo \"Y\r\n\" | code --install-extension vscode-lingua-franca-*.vsix --force",
         "install": "npm run clean && npm run build && npm run deploy",
         "test": "npm run compile-tests && node ./out/test/test/test_runner.js --dependencies=present",
         "test-dependencies-outdated": "npm run compile-tests && node ./out/test/test/test_runner.js --dependencies=outdated",
