--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
         "glob": "^8.0.3",
         "maven": "^5.0.0",
         "mocha": "^10.0.0",
+        "move-cli": "^2.0.0",
         "node": "^18.13.0",
         "node-fetch": "^3.3.1",
         "path": "^0.12.7",
@@ -161,14 +162,14 @@
         "vscode-languageclient": "^6.1.3"
     },
     "scripts": {
-        "clean": "rm -rf out && rm -rf lib && rm -f vscode-lingua-franca-*.vsix",
+        "clean": "rimraf out && rimraf lib && rimraf vscode-lingua-franca-*.vsix",
         "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
         "vscode:prepublish": "npm run esbuild-base -- --minify",
         "compile": "npm run esbuild-base -- --sourcemap",
         "watch": "npm run esbuild-base -- --sourcemap --watch",
         "build": "npx ts-node src/build_lds.ts",
         "compile-tests": "npx tsc --lib \"dom\" --outDir out/test --inlineSourceMap",
-        "deploy": "(mv lingua-franca ../temp-lingua-franca89539275 || move lingua-franca ../temp-lingua-franca89539275) && vsce package && (mv ../temp-lingua-franca89539275 lingua-franca || move ../temp-lingua-franca89539275 lingua-franca) && echo \"Y\r\n\" | code --install-extension vscode-lingua-franca-*.vsix --force",
+        "deploy": "move-cli lingua-franca ../temp-lingua-franca89539275 && vsce package && move-cli ../temp-lingua-franca89539275 lingua-franca && echo \"Y\r\n\" | code --install-extension vscode-lingua-franca-*.vsix --force",
         "install": "npm run clean && npm run build && npm run deploy",
         "test": "npm run compile-tests && node ./out/test/test/test_runner.js --dependencies=present",
         "test-dependencies-outdated": "npm run compile-tests && node ./out/test/test/test_runner.js --dependencies=outdated",
