--- a/.github/workflows/dependency-tests.yml
+++ b/.github/workflows/dependency-tests.yml
@@ -24,7 +24,7 @@ jobs:
         platform: [ubuntu-latest]
     runs-on: ${{ matrix.platform }}
     steps:
-      - uses: lf-lang/vscode-lingua-franca/.github/actions/build@update-error-message
+      - uses: lf-lang/vscode-lingua-franca/.github/actions/build@main
       - name: Uninstall dependencies
         run: |
           python3 -m pip uninstall -y pylint
@@ -44,7 +44,7 @@ jobs:
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
-      - uses: lf-lang/vscode-lingua-franca/.github/actions/build@update-error-message
+      - uses: lf-lang/vscode-lingua-franca/.github/actions/build@main
       - name: Uninstall dependencies
         run: |
           python3 -m pip uninstall -y pylint
@@ -60,7 +60,7 @@ jobs:
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
-      - uses: lf-lang/vscode-lingua-franca/.github/actions/build@update-error-message
+      - uses: lf-lang/vscode-lingua-franca/.github/actions/build@main
       - name: Run tests (Linux)
         run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run test-dependencies-missing-basic
         if: ${{ runner.os == 'Linux' }}
