Build and report status

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -23,3 +23,8 @@ jobs:
       - name: Set nightly version number
         run: |
           ./.github/scripts/nightly-version.sh
+      - uses: lf-lang/vscode-lingua-franca/.github/actions/build@nightly
+      - name: Report status
+        run: |
+          ls -l
+          git status
