--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -23,7 +23,8 @@ jobs:
       - name: Set nightly version number
         run: |
           ./.github/scripts/nightly-version.sh
-      - uses: ./.github/actions/build
+      - name: Build the extension
+        uses: ./.github/actions/build
       - name: Report status
         run: |
           ls -l
