--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -28,6 +28,8 @@ jobs:
           ./.github/scripts/nightly-version.sh
       - name: Build the extension
         uses: ./.github/actions/build
+        with:
+          package: true  
       - name: Report status
         run: |
           ls -l
