--- a/package.json
+++ b/package.json
@@ -169,8 +169,8 @@
         "watch": "npm run esbuild-base -- --sourcemap --watch",
         "build": "npx ts-node src/build_lds.ts",
         "compile-tests": "npx tsc --lib \"dom\" --outDir out/test --inlineSourceMap",
-        "package": "move-cli lingua-franca ../temp-lingua-franca89539275 && vsce package && move-cli ../temp-lingua-franca89539275 lingua-franca && echo \"Y\r\n\"",
-        "deploy": "code --install-extension vscode-lingua-franca-*.vsix --force",
+        "package": "move-cli lingua-franca ../temp-lingua-franca89539275 && vsce package && move-cli ../temp-lingua-franca89539275 lingua-franca",
+        "deploy": "echo \"Y\r\n\" | code --install-extension vscode-lingua-franca-*.vsix --force",
         "install": "npm run clean && npm run build && npm run package && npm run deploy",
         "test": "npm run compile-tests && node ./out/test/test/test_runner.js --dependencies=present",
         "test-dependencies-outdated": "npm run compile-tests && node ./out/test/test/test_runner.js --dependencies=outdated",
