--- a/.github/workflows/dependency-tests.yml
+++ b/.github/workflows/dependency-tests.yml
@@ -24,9 +24,15 @@ jobs:
         platform: [ubuntu-latest]
     runs-on: ${{ matrix.platform }}
     steps:
-      - uses: lf-lang/vscode-lingua-franca/.github/actions/build@update-error-message
+      - name: Check out vscode-lingua-franca repository
+        uses: actions/checkout@v3
         with:
-          partial: "true"
+          submodules: recursive
+          fetch-depth: 1
+      - name: Build the extension
+        uses: ./.github/actions/build
+        with:
+          partial: true
       - name: Uninstall dependencies
         run: |
           python3 -m pip uninstall -y pylint
@@ -46,7 +52,13 @@ jobs:
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
-      - uses: lf-lang/vscode-lingua-franca/.github/actions/build@main
+      - name: Check out vscode-lingua-franca repository
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
+          fetch-depth: 1
+      - name: Build the extension
+        uses: ./.github/actions/build
         with:
           partial: true
       - name: Uninstall dependencies
