--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -2,8 +2,6 @@ name: Nightly build
 
 # Trigger the workflow every day at 5 AM (UTC).
 on:
-  push:
-    branches: nightly
   schedule:
     - cron: '0 5 * * *'
   workflow_dispatch:
@@ -46,11 +44,11 @@ jobs:
           registryUrl: https://marketplace.visualstudio.com
           extensionFile: vscode-lingua-franca/vscode-lingua-franca-${{ env.version }}.vsix
           preRelease: true
-          dryRun: ${{ true || github.event_name == 'workflow_dispatch' && inputs.dry-run == 'true' }}
+          dryRun: ${{ github.event_name == 'workflow_dispatch' && inputs.dry-run == 'true' }}
       - name: Publish to Open VSX Registry
         uses: HaaLeo/publish-vscode-extension@v1
         with:
           pat: ${{ secrets.OPEN_VSX_TOKEN }}
           extensionFile: vscode-lingua-franca/vscode-lingua-franca-${{ env.version }}.vsix
           preRelease: true
-          dryRun: ${{ true || github.event_name == 'workflow_dispatch' && inputs.dry-run == 'true' }}
+          dryRun: ${{ github.event_name == 'workflow_dispatch' && inputs.dry-run == 'true' }}
