--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -43,13 +43,13 @@ jobs:
         with:
           pat: ${{ secrets.VS_MARKETPLACE_TOKEN }}
           registryUrl: https://marketplace.visualstudio.com
-          extensionFile: vscode-lingua-franca/vscode-lingua-franca-${{ env.version }}.vsix
+          extensionFile: vscode-lingua-franca-${{ env.version }}.vsix
           preRelease: true
           dryRun: ${{ github.event_name == 'workflow_dispatch' && inputs.dry-run == 'true' }}
       - name: Publish to Open VSX Registry
         uses: HaaLeo/publish-vscode-extension@v1
         with:
           pat: ${{ secrets.OPEN_VSX_TOKEN }}
-          extensionFile: vscode-lingua-franca/vscode-lingua-franca-${{ env.version }}.vsix
+          extensionFile: vscode-lingua-franca-${{ env.version }}.vsix
           preRelease: true
           dryRun: ${{ github.event_name == 'workflow_dispatch' && inputs.dry-run == 'true' }}
