Upload artifact during dry runs

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -38,6 +38,14 @@ jobs:
         with:
           package: true
           partial: true
+      - name: Upload build artifact (dry run only)
+        uses: actions/upload-artifact@v2
+        with:
+          name: Nightly VS Code extension
+          path: vscode-lingua-franca-${{ env.version }}.vsix
+          if-no-files-found: error
+          retention-days: 3
+        if: ${{ inputs.dry-run == 'true' }}
       - name: Publish to Visual Studio Marketplace
         uses: HaaLeo/publish-vscode-extension@v1
         with:
