Add ability to create pre-release package

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -38,6 +38,7 @@ jobs:
         with:
           package: true
           partial: true
+          pre-release: true
       - name: Upload build artifact (dry run only)
         uses: actions/upload-artifact@v2
         with:
