--- a/package.json
+++ b/package.json
@@ -170,7 +170,7 @@
         "build": "npx ts-node src/build_lds.ts",
         "compile-tests": "npx tsc --lib \"dom\" --outDir out/test --inlineSourceMap",
         "package": "move-cli lingua-franca ../temp-lingua-franca89539275 && vsce package && move-cli ../temp-lingua-franca89539275 lingua-franca",
-        "pre-rel-package": "move-cli lingua-franca ../temp-lingua-franca89539275 && vsce package --pre-release && move-cli ../temp-lingua-franca89539275 lingua-franca",
+        "package-pre-release": "move-cli lingua-franca ../temp-lingua-franca89539275 && vsce package --pre-release && move-cli ../temp-lingua-franca89539275 lingua-franca",
         "deploy": "echo \"Y\r\n\" | code --install-extension vscode-lingua-franca-*.vsix --force",
         "install": "npm run clean && npm run build && npm run package && npm run deploy",
         "test": "npm run compile-tests && node ./out/test/test/test_runner.js --dependencies=present",
