--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -46,7 +46,7 @@ jobs:
           path: vscode-lingua-franca-${{ env.version }}.vsix
           if-no-files-found: error
           retention-days: 3
-        if: ${{ inputs.dry-run == 'true' }}
+        if: ${{ github.event.inputs.dry-run == 'true' }}
       - name: Publish to Visual Studio Marketplace
         uses: HaaLeo/publish-vscode-extension@v1
         with:
@@ -54,11 +54,11 @@ jobs:
           registryUrl: https://marketplace.visualstudio.com
           extensionFile: vscode-lingua-franca-${{ env.version }}.vsix
           preRelease: true
-          dryRun: ${{ github.event_name == 'workflow_dispatch' && inputs.dry-run == 'true' }}
+          dryRun: ${{ github.event.inputs.dry-run == 'true' }}
       - name: Publish to Open VSX Registry
         uses: HaaLeo/publish-vscode-extension@v1
         with:
           pat: ${{ secrets.OPEN_VSX_TOKEN }}
           extensionFile: vscode-lingua-franca-${{ env.version }}.vsix
           preRelease: true
-          dryRun: ${{ github.event_name == 'workflow_dispatch' && inputs.dry-run == 'true' }}
+          dryRun: ${{ github.event.inputs.dry-run == 'true' }}
