--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
         "@types/vscode": "^1.49.0",
         "@types/which": "^2.0.1",
         "@vscode/test-electron": "^2.1.3",
+        "@vscode/vsce": "^2.21.0",
         "chai": "^4.3.4",
         "chai-spies": "^1.0.0",
         "colorette": "^2.0.16",
@@ -153,7 +154,6 @@
         "ts-node": "^10.9.1",
         "typescript": "^4.6.4",
         "url-exist": "^3.0.0",
-        "vsce": "^2.15.0",
         "vscode-oniguruma": "^1.7.0",
         "vscode-textmate": "^9.0.0",
         "which": "^2.0.2"
