--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Deploy nightly release
         uses: marvinpinto/action-automatic-releases@latest
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          repo_token: "${{ secrets.PUBLISH_RELEASE }}"
           automatic_release_tag: 'nightly'
           prerelease: true
           title: "Lingua Franca VS Code Nightly"
