Add command to get info about the entire workspace

--- a/package.json
+++ b/package.json
@@ -74,6 +74,10 @@
                 "title": "Lingua Franca: Get AST"
             },
             {
+                "command": "linguafranca.getWorkspace",
+                "title": "Lingua Franca: Get Workspace"
+            },
+            {
                 "command": "linguafranca.build",
                 "title": "Lingua Franca: Build"
             },
