Expose command to check Docker version.
This coupling between extensions might not be what we want -- it might
be preferable to librarify the version checking code -- but it is the
easiest thing to do right now and it isn't obviously a terrible idea.

--- a/package.json
+++ b/package.json
@@ -86,6 +86,10 @@
                 "title": "Lingua Franca: Build and Run"
             },
             {
+                "command": "linguafranca.checkDocker",
+                "title": "Lingua Franca: Check Docker Version"
+            },
+            {
                 "command": "linguafranca.createNewFile",
                 "title": "New Lingua Franca File",
                 "shortTitle": "Lingua Franca File"
