--- a/package.json
+++ b/package.json
@@ -181,6 +181,7 @@
         "which": "^2.0.2"
     },
     "dependencies": {
+        "lfwasm": "file:lfw-pkg",
         "vscode-languageclient": "^6.1.3"
     },
     "scripts": {
