--- a/package.json
+++ b/package.json
@@ -163,7 +163,6 @@
         "chai-spies": "^1.0.0",
         "colorette": "^2.0.16",
         "commander": "^8.3.0",
-        "esbuild": "^0.14.2",
         "glob": "^8.0.3",
         "maven": "^5.0.0",
         "mocha": "^10.0.0",
@@ -178,7 +177,9 @@
         "url-exist": "^3.0.0",
         "vscode-oniguruma": "^1.7.0",
         "vscode-textmate": "^9.0.0",
-        "which": "^2.0.2"
+        "which": "^2.0.2",
+        "webpack": "^5.90.0",
+        "webpack-cli": "^5.1.4"
     },
     "dependencies": {
         "lfwasm": "file:lfw-pkg",
@@ -186,10 +187,10 @@
     },
     "scripts": {
         "clean": "rimraf out && rimraf lib && rimraf vscode-lingua-franca-*.vsix",
-        "esbuild-base": "node src/tsbuild.mjs",
-        "vscode:prepublish": "npm run esbuild-base -- --minify",
-        "compile": "./write-version-to-file.sh src/extension_version.ts && npm run esbuild-base -- --sourcemap",
-        "watch": "npm run esbuild-base -- --sourcemap --watch",
+        "transpile": "webpack",
+        "vscode:prepublish": "npm run transpile -- --minify",
+        "compile": "./write-version-to-file.sh src/extension_version.ts && npm run transpile -- --sourcemap",
+        "watch": "npm run transpile -- --sourcemap --watch",
         "build": "npx ts-node src/build_lds.ts",
         "compile-tests": "npx tsc --lib \"dom\" --outDir out/test --inlineSourceMap",
         "package": "move-cli lingua-franca ../temp-lingua-franca89539275 && vsce package && move-cli ../temp-lingua-franca89539275 lingua-franca",
