--- a/package.json
+++ b/package.json
@@ -196,7 +196,7 @@
         "package": "move-cli lingua-franca ../temp-lingua-franca89539275 && (vsce package; move-cli ../temp-lingua-franca89539275 lingua-franca)",
         "package-pre-release": "move-cli lingua-franca ../temp-lingua-franca89539275 && (vsce package --pre-release; move-cli ../temp-lingua-franca89539275 lingua-franca)",
         "deploy": "echo \"Y\r\n\" | code --install-extension vscode-lingua-franca-*.vsix --force",
-        "install": "npm run clean && npm run build && npm run package && npm run deploy",
+        "install": "cd $LF_EDITOR_SUPPORT_REPO_PATH/lfwasm && make && cd - && rm -rf ./lfw-pkg && cp -r $LF_EDITOR_SUPPORT_REPO_PATH/lfwasm/pkg ./lfw-pkg && npm run clean && npm run build && npm run package && npm run deploy",
         "test": "npm run compile-tests && node ./out/test/test/test_runner.js --dependencies=present",
         "test-dependencies-outdated": "npm run compile-tests && node ./out/test/test/test_runner.js --dependencies=outdated",
         "test-dependencies-missing-basic": "npm run compile-tests && node ./out/test/test/test_runner.js --dependencies=missing0",
