--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,7 @@
             "outFiles": [
                 "${workspaceFolder}/out/**/*.js"
             ],
+            "sourceMaps": true,
             "request": "launch",
             "type": "extensionHost"
         },
