--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "type": "extensionHost"
         },
         {
-            "name": "Launch VS Code Extension (Socket) LF",
+            "name": "Launch VS Code Extension (Socket) LF with Klighd Extension",
             "type": "extensionHost",
             "request": "launch",
             "args": [
@@ -35,7 +35,26 @@
             },
             "outFiles": [
                 "${workspaceFolder}/out/**/*.js",
-	       "${workspaceFolder}/../klighd-vscode/applications/klighd-vscode/dist/**/*.js"
+                "${workspaceFolder}/../klighd-vscode/applications/klighd-vscode/dist/**/*.js"
+            ],
+        },
+        {
+            "name": "Launch VS Code Extension (Socket) LF",
+            "type": "extensionHost",
+            "request": "launch",
+            "args": [
+                "--extensionDevelopmentPath=${workspaceFolder}/",
+            ],
+            "env": {
+                "LF_LS_PORT": "7670"
+            },
+            "skipFiles": [
+              "<node_internals>/**"
+            ],
+            "sourceMaps": true,
+            "smartStep": true,
+            "outFiles": [
+                "${workspaceFolder}/out/**/*.js"
             ],
         },
         {
