--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "type": "extensionHost"
         },
         {
-            "name": "Launch VS Code Extension (Socket) LF",
+            "name": "Launch VS Code Extension (Socket) LF with Klighd",
             "type": "extensionHost",
             "request": "launch",
             "args": [
@@ -37,6 +37,25 @@
             "outFiles": [
                 "${workspaceFolder}/out/**/*.js",
 	       "${workspaceFolder}/../klighd-vscode/applications/klighd-vscode/dist/**/*.js"
+            ],
+        },
+        {
+            "name": "Launch VS Code Extension (Socket) LF",
+            "type": "extensionHost",
+            "request": "launch",
+            "args": [
+                "--extensionDevelopmentPath=${workspaceFolder}/",
+            ],
+            "env": {
+                "LF_LS_PORT": "7670"
+            },
+            "skipFiles": [
+              "<node_internals>/**"
+            ],
+            "sourceMaps": true,
+            "smartStep": true,
+            "outFiles": [
+                "${workspaceFolder}/out/**/*.js",
             ],
         },
         {
