--- a/package.json
+++ b/package.json
@@ -172,14 +172,15 @@
         "path": "^0.12.7",
         "rimraf": "^3.0.2",
         "simple-git": "^3.7.1",
+        "ts-loader": "^9.5.1",
         "ts-node": "^10.9.1",
         "typescript": "^4.6.4",
         "url-exist": "^3.0.0",
         "vscode-oniguruma": "^1.7.0",
         "vscode-textmate": "^9.0.0",
-        "which": "^2.0.2",
         "webpack": "^5.90.0",
-        "webpack-cli": "^5.1.4"
+        "webpack-cli": "^5.1.4",
+        "which": "^2.0.2"
     },
     "dependencies": {
         "lfwasm": "file:lfw-pkg",
