--- a/package.json
+++ b/package.json
@@ -190,14 +190,14 @@
         "clean": "rimraf out && rimraf lib && rimraf vscode-lingua-franca-*.vsix",
         "transpile": "webpack",
         "vscode:prepublish": "npm run transpile",
-        "compile": "./write-version-to-file.sh src/extension_version.ts && npm run transpile",
+        "compile": "cd ./editor-support/lfwasm && make && cd - && rm -rf ./lfw-pkg && cp -r ./editor-support/lfwasm/pkg ./lfw-pkg && ./write-version-to-file.sh src/extension_version.ts && npm run transpile",
         "watch": "npm run transpile --watch",
         "build": "npx ts-node src/build_lds.ts",
-        "compile-tests": "npx tsc --lib \"dom\" --outDir out/test --inlineSourceMap",
+        "compile-tests": "npm run compile && npx tsc --lib \"dom\" --outDir out/test --inlineSourceMap",
         "package": "move-cli lingua-franca ../temp-lingua-franca89539275 && (vsce package; move-cli ../temp-lingua-franca89539275 lingua-franca)",
         "package-pre-release": "move-cli lingua-franca ../temp-lingua-franca89539275 && (vsce package --pre-release; move-cli ../temp-lingua-franca89539275 lingua-franca)",
         "deploy": "echo \"Y\r\n\" | code --install-extension vscode-lingua-franca-*.vsix --force",
-        "install": "cd ./editor-support/lfwasm && make && cd - && rm -rf ./lfw-pkg && cp -r ./editor-support/lfwasm/pkg ./lfw-pkg && npm run clean && npm run build && npm run package && npm run deploy",
+        "install": "npm run clean && npm run build && npm run package && npm run deploy",
         "test": "npm run compile-tests && node ./out/test/test/test_runner.js --dependencies=present",
         "test-dependencies-outdated": "npm run compile-tests && node ./out/test/test/test_runner.js --dependencies=outdated",
         "test-dependencies-missing-basic": "npm run compile-tests && node ./out/test/test/test_runner.js --dependencies=missing0",
