--- a/.github/workflows/dependency-tests.yml
+++ b/.github/workflows/dependency-tests.yml
@@ -64,12 +64,11 @@ jobs:
       - name: Uninstall dependencies
         run: |
           python3 -m pip uninstall -y pylint
-          rustup self uninstall -y
       - name: Run tests (Linux)
         run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run test-dependencies-missing-extended
         if: ${{ runner.os == 'Linux' }}
       - name: Run tests (non-Linux)
-        run: npm run test-dependencies-missing-extended
+        run: export LF_VS_CODE_ALLOW_GLOBAL_UNINSTALLS=OK && npm run test-dependencies-missing-extended
         if: ${{ runner.os != 'Linux' }}
   test-dependencies-missing-basic:
     strategy:
@@ -85,12 +84,9 @@ jobs:
       - uses: lf-lang/vscode-lingua-franca/.github/actions/build@main
         with:
           partial: "true"
-      - name: Uninstall dependencies
-        run: |
-          rustup self uninstall -y
       - name: Run tests (Linux)
         run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run test-dependencies-missing-basic
         if: ${{ runner.os == 'Linux' }}
       - name: Run tests (non-Linux)
-        run: npm run test-dependencies-missing-basic
+        run: export LF_VS_CODE_ALLOW_GLOBAL_UNINSTALLS=OK && npm run test-dependencies-missing-basic
         if: ${{ runner.os != 'Linux' }}
